--- a/PonzianiComponents/EvaluationGauge.razor
+++ b/PonzianiComponents/EvaluationGauge.razor
@@ -1,24 +1,28 @@
-﻿<div @attributes=OtherAttributes>
-    @if (Orientation == Orientation.Horizontal)
-    {
+﻿@if (Orientation == Orientation.Horizontal)
+{
+    <div @attributes=OtherAttributes>
         <div class="pzEvaluationGaugeScore">@ScoreText</div>
         <div class="pzEvaluationGauge">
             <div class="pzEvaluationBar" style="width:@Width;"></div>
         </div>
         <div class="pzTickbar">
-            @TickBarSVG();
+            @TickBarSVG()
         </div>
-    } else
-    {
-        <div class="pzVTickbar">@TickBarSVGV();</div>
+    </div>
+}
+else
+{
+    <div @attributes=OtherAttributes>
+        <div class="pzVTickbar">@TickBarSVGV()</div>
         <div class="pzVEvaluationGauge">
             <div class="pzVEvaluationBar" style="height:@Height;"></div>
         </div>
         <div class="pzVEvaluationGaugeScore">
-        	@ScoreText
+            @ScoreText
         </div>
-    }
-</div>
+    </div>
+}
+
 
 @code {
 
