--- a/PonzianiComponentsDemo/Client/Shared/NavMenu.razor
+++ b/PonzianiComponentsDemo/Client/Shared/NavMenu.razor
@@ -44,6 +44,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Engine
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="analysisboard">
+                <span class="oi oi-plus" aria-hidden="true"></span> Analysis Board
+            </NavLink>
+        </li>
     </ul>
 </div>
 
